[workspace]
resolver = "2"
members = [
    "crates/hyperion-vpn-core",
    "crates/hyperion-vpn-server",
    "crates/hyperion-vpn-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
publish = true
license = "GPL-3.0-or-later"
authors = ["Tadas Talaikis <info@nordlet.com>"]
keywords = []
categories = []
repository = "https://github.com/hyperiondb/hyperion-vpn"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "=1.52.3", features = ["full"] }
clap = { version = "=4.5.60", features = ["derive", "env"] }
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
bytes = "=1.11.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
