[workspace]
resolver = "2"
members = [
    "crates/hyperion-vpn-core",
    "crates/hyperion-vpn-cli-common",
    "crates/hyperion-vpn-server",
    "crates/hyperion-vpn-client",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.96"
publish = true
license = "GPL-3.0-or-later"
authors = ["Tadas Talaikis <info@nordlet.com>"]
keywords = ["vpn", "tunnel", "port-knocking", "noise-protocol", "security"]
categories = ["network-programming", "cryptography", "authentication", "command-line-utilities"]
repository = "https://github.com/hyperiondb/hyperion-vpn"
readme = "README.md"

[workspace.dependencies]
hyperion-vpn-core = { path = "crates/hyperion-vpn-core", version = "=0.2.0" }
hyperion-vpn-cli-common = { path = "crates/hyperion-vpn-cli-common", version = "=0.2.0" }
tokio = { version = "=1.52.3", features = ["full"] }
clap = { version = "=4.5.60", features = ["derive", "env"] }
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
zeroize = "=1.8.2"
rpassword = "=7.5.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
