[package]
name = "hyperion-vpn-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "hyperion-client"
path = "src/main.rs"

[dependencies]
hyperion-vpn-core = { path = "../hyperion-vpn-core" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
