[package]
name = "hyperion-vpn-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "hyperion-client"
path = "src/main.rs"

[dependencies]
hyperion-vpn-core = { path = "../hyperion-vpn-core" }
hyperion-vpn-cli-common = { path = "../hyperion-vpn-cli-common" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tun-rs = { version = "=2.8.3", features = ["async_tokio"], optional = true }
ipstack = { version = "=1.0.0", optional = true }

[features]
default = ["tun"]
tun = ["dep:tun-rs", "dep:ipstack"]
