[package]
name = "hyperion-vpn-client"
description = "Hyperion VPN admin client: knock + Noise tunnel, local port forwards, and fake-IP TUN mode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "hyperion-client"
path = "src/main.rs"

[dependencies]
hyperion-vpn-core.workspace = true
hyperion-vpn-cli-common.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tun-rs = { version = "=2.8.3", features = ["async_tokio"], optional = true }
ipstack = { version = "=1.0.0", optional = true }

[features]
default = ["tun"]
tun = ["dep:tun-rs", "dep:ipstack"]
