[package]
name = "hyperion-vpn-core"
description = "Core protocol for Hyperion VPN: SPA knock crypto, Noise IKpsk2 transport, yamux multiplexing, pooled client, and relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
socket2 = { version = "=0.6.4", features = ["all"] }
noise-protocol = "=0.2.1"
noise-rust-crypto = "=0.6.2"
chacha20poly1305 = "=0.10.1"
zeroize.workspace = true
argon2 = "=0.5.3"
base64 = "=0.22.1"
getrandom = "=0.3.4"
yamux = "=0.13.10"
tokio-util = { version = "=0.7.18", features = ["compat"] }
