[package]
name = "hyperion-vpn-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "hyperion-server"
path = "src/main.rs"

[dependencies]
hyperion-vpn-core = { path = "../hyperion-vpn-core" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rpassword = "=7.5.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "=0.2.186"
